client/src/styles/furni_data_page.scss
@use "../utilities/functions.scss" as func;
@import "../utilities/mixins.scss";
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:wght@500&family=Poppins&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap");


.outer-container#blur.active {
  filter: blur(15px);
  transition: ease-in .1s;
  pointer-events: none;
  user-select: none;
}

#modal {
  position: fixed;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 70%;
  padding: 2.5%;
  box-shadow: 0 5px 30px rgba(0,0,0,.30);
  background-color: white;
  border-radius: 15px;

  visibility: hidden;
  opacity: 0;
  transition: 0.5s;

  .close-button {
    margin-right: 2.3vw;
    right: 0;
    position: absolute;
    border-radius: 50%;
    width: 43px;
    height: 44px;
    background-color: slategrey;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  form {
    display: flex;
    flex-direction: column;
    width: 100%;

    .title-modal {
      font-size: func.toEm(29);
      font-weight: 600;
    }

    .form-container {
      width: 100%;
      display: flex;
      gap: 2%;
      margin-top: 2%;

      .left-container {
        width: 47%;

        .check-container {
          display: flex;
          flex-direction: column;

          .upper-part {
            display: flex;
            flex-direction: row;
          }

          .lower-part {
            p {
              font-size: func.toEm(14);
              color: red;
              margin: 1% 0;
            }
          }
        }
      }

      .right-container {
        width: 47%;
        
        .furni-dimension-label {
          color: #6f6e6e;
          display: flex;
          justify-content: space-between;
          align-items: center;

          .text {

          }

          .line {
            height: 0.3px;
            background-color: #929292;
            width: 68%;
          }

          .line2 {
            height: 0.3px;
            background-color: #929292;
            width: 73%;
          }
        }
        .furni-dimension-container {
          margin-top: 2%;
          display: flex;
          gap: 2.2%;
        }
      }
    }
  }
}

#modal.active {
  top: 50%;
  visibility: visible;
  opacity: 1;
  transition: 0.5s;
}

.outer-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;

  .content-container {
    border: solid 3px white;
    background-color: rgba(255, 255, 255, 0.4);
    width: 95.7%;
    height: 94%;
    border-radius: 15px;

    display: flex;
    flex-direction: row;

    .side-bar {
      width: 17%;
      display: flex;
      flex-direction: column;
      padding: 1%;
      align-items: center;

      .logo {
        aspect-ratio: 313/ 140;
        margin-top: 3%;
        width: 93%;
        height: unset;
        background: url("../assets/dashboard/pc_logo_long_2.webp") center/cover
          no-repeat;
      }

      .menu-container {
        width: 100%;
        margin-top: 14%;
        display: flex;
        flex-direction: column;
        gap: 8%;
        height: 20%;

        .icon {
          margin-top: 2%;
        }
        .menu {
          font-size: func.toEm(15);
        }
        .dash-menu:hover {
          border-color: rgba(36, 139, 150, 1);
        }
        .dash-menu {
          cursor: pointer;
          height: 45%;
          gap: 7%;
          color: rgba(36, 139, 150, 1);
          display: flex;
          flex-direction: row;
          align-items: center;
          border-radius: 15px;
          padding-inline: 8%;
          border: solid 1px transparent; /* Set initial border color */
          transition: border 0.2s ease; /* Apply transition to the border property */
        }
        .dash-menu.selected-menu {
          border: none;
          height: 45%;
          color: white;
          gap: 7%;
          display: flex;
          flex-direction: row;
          align-items: center;
          background: radial-gradient(
            circle,
            rgba(125, 167, 171, 1) 0%,
            rgba(36, 139, 150, 1) 68%
          );
          border-radius: 15px;
          padding-inline: 8%;
        }
      }
    }

    .separator {
      place-self: center;
      flex-shrink: 0;
      height: 93%;
      width: 1.3px;
      background-color: rgb(172, 205, 192);
    }

    .main-part {
      display: flex;
      flex-direction: column;
      padding: 2%;
      width: 77%;
      position: relative;

      .top-content {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        width: 100%;
        margin-top: 1%;
        align-items: center;

        .welcome-text {
          color: rgba(36, 139, 150, 1);
          font-size: func.toEm(17);
          font-weight: 500;
        }

        .account-container {
          padding-right: 1%;
          width: 12%;
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          .profpic {
            border-radius: 50%;
            width: func.toEm(30);
            height: func.toEm(30);
            background-color: red;
          }
          .fullname {
          }
        }
      }

      .title-page {
        color: #052208;
        font-size: func.toEm(44);
        font-weight: bolder;
      }

      .main-content {
        display: flex;
        flex-direction: row;
        height: 100%;
        margin-top: 1%;
        gap: 1.4%;

        .table-container {
            display: flex;
            width: 100%;
            gap: 2%;
            flex-direction: column;

            .header{
                display: flex;
                flex-direction: row;
                justify-content: space-between;
                align-items: center;

                .table-title {

                }

                .button-div {
                  overflow: hidden;
                  border-radius: 15px;
                  background-color: red;
                }
            }

            .dataTable {
                width: 100%;
                height: 76%;
                overflow: hidden;
                border-radius: 15px;
            }
        }

      }
    }
  }
}

